<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activities_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:id="@+id/userImage"
            android:contentDescription="@string/userimagedescription" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userImageUploadLayout"
            android:visibility="gone">

            <TextView
                android:text="@string/creation_validation_text"
                android:layout_margin="@dimen/create_activity_margin"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userImageUploadText" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_margin="@dimen/create_activity_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LinearProgress"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/uploadProgress" />
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/create_activity_margin"
                android:textAlignment="center"
                android:id="@+id/userImageUploadRate"
                android:text="@string/Opourcent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/upload_validation"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:id="@+id/uploadedImage"
                android:contentDescription="@string/uploadvalidationimage" />


        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userProfileButtonsLayout"
        android:orientation="horizontal">
        <Button
            android:text="@string/user_image_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/create_activity_margin"
            android:id="@+id/userImageOk" />

        <Button
            android:text="@string/user_image_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/create_activity_margin"
            android:id="@+id/userImageEdit" />
    </LinearLayout>

</LinearLayout>
